5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4004/executions/1756_1580.log
== TEST (2019-05-27 15:42:52) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = array(eval(input("Nomes: ")))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:43:40) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:43:55) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:44:15) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:44:42) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:45:00) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1

while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:42:36) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1
ma = 0
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
	if n[i] == max(n):
		ma = i
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:44:16) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1
ma = 0
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		i = i + 1
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:51:01) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1
ma = 0
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
		else:
			i = i + 1
			r = r + 1
s = sum(n)/size(n)
print(f)
print(a)
print(r)
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:51:35) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
		else:
			i = i + 1
			r = r + 1
s = sum(n)/size(n)
print(f)
print(a)
print(r)
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:52:11) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
		else:
			i = i + 1
			r = r + 1
s = sum(n)/size(n)
print(f)
print(a)
print(r)
print(round(s, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:03:39) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
h = 0 #indice maior nota
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
			s = s + n[i]
		else:
			i = i + 1
			r = r + 1
			s = s + n[i]
	if n[i] = max(n):
		h = i
	else:
		h = h
b = a + r
b = arange(b)
m = s/size(b)

print(f)
print(a)
print(r)
print(round(m, 2))
print(N[h])
-- ERROR:
File "XXXX", line 26
    if n[i] = max(n):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:03:53) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
h = 0 #indice maior nota
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
			s = s + n[i]
		else:
			i = i + 1
			r = r + 1
			s = s + n[i]
	if n[i] == max(n):
		h = i
	else:
		h = h
b = a + r
b = arange(b)
m = s/size(b)

print(f)
print(a)
print(r)
print(round(m, 2))
print(N[h])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:06:13) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
h = 0 #indice maior nota
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			i = i + 1
			a = a + 1
			s = s + n[i]
		else:
			i = i + 1
			r = r + 1
			s = s + n[i]
	if n[i] == max(n):
		h = i
	else:
		h = h
b = a + r
b = arange(b)
m = s/size(b)

print(f)
print(a)
print(r)
print(round(m, 2))
print(N[h])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:08:15) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
	if n[i] == max(n):
		l = i
	else:
		l = l
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:08:25) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
	if n[i] == max(n):
		l = i
	else:
		l = l
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:09:33) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
	l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
File "XXXX", line 14
    l = i
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:09:59) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:10:07) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:11:57) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:13:00) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- EXECUTION TIME:
0.586273
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
'
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:13:11) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:13:48) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- EXECUTION TIME:
0.585401
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
[
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
'
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:13:50) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
N = str(array(eval(input("Nomes: "))))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(N[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:16:33) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
k = array(eval(input("Nomes: ")))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(k[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 22:16:44) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
k = array(eval(input("Nomes: ")))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(k[l])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 22:17:05) 
-- CODE:
from numpy import *

n = array(eval(input("notas: ")))
k = array(eval(input("Nomes: ")))

f = 0 #faltas
a = 0 #aprovados
r = 0 #reprovados
s = 0 #soma
i = 0 #contador 1
l = 0 #contador 2
while i < size(n):
	if n[i] == max(n):
		l = i
	else:
		l = l
	if n[i] < 0:
		i = i + 1
		f = f + 1
	else:
		if n[i] >= 6:
			a = a + 1
			s = s + n[i]
			i = i + 1
		else:
			r = r + 1
			s = s + n[i]
			i = i + 1
b = a + r
b = arange(b)
m = s/size(b)
print(f)
print(a)
print(r)
print(round(m, 2))
print(k[l])
-- EXECUTION TIME:
0.358976
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
